# study-fastapi

./: .gitignore  README.md
libs/contrib/: pyproject.toml
libs/contrib/contrib/: types.py
libs/contrib/contrib/conf/: __init__.py  base.py  utils.py
libs/contrib/contrib/logging/: boot.py  handlers.py
libs/contrib/contrib/testing/: decorators.py
libs/contrib/tests/: test_contrib.py
projects/hello-graphql/: Makefile  main.py  pyproject.toml
projects/hello-graphql/apps/: conftest.py
projects/hello-graphql/apps/hello/: controllers.py  routes.py
projects/hello-graphql/apps/hello/models/: schemas.py
projects/hello-graphql/apps/hello/tests/api/: test_hello.py
projects/hello-graphql/apps/hello/tests/controllers/: test_controllers.py  test_main.py
projects/hello-graphql/apps/hello/tests/e2e/: test_main.http
projects/hello-graphql/handlers/: errors.py
projects/hello-graphql/hello_graphql/: graphql.py  main.py  routes.py  settings.py
projects/study-club/: .gitignore  BUILD  README.md  pants.toml  pyproject.toml  requirements.txt
projects/study-club/notes/: 01.md  02.md
projects/study-club/src/s01/: BUILD  main.py  pyproject.toml  requirements.txt
projects/study-club/src/s01/tests/: test_hello.py
projects/tutorial-user-guide/: README.md  pyproject.toml
projects/tutorial-user-guide/notes/: 01.md
projects/tutorial-user-guide/tutorial/: exceptions.py  main.py  routes.py
projects/tutorial-user-guide/tutorial/day03/: app.py  conftest.py
projects/tutorial-user-guide/tutorial/day03/endpoints/: handling_errors.py  path_op_conf.py  upload_files.py
projects/tutorial-user-guide/tutorial/day03/handlers/: error.py
projects/tutorial-user-guide/tutorial/day03/tests/endpoints/: test_day03.py  test_day3_apis.py
